--- a/Homepage.html
+++ b/Homepage.html
@@ -3,6 +3,7 @@
     <title>Home</title>
   </head>
   <body>
-    <h1>Hello World
+    <h1>Hello World</h1>
+    <p>Added a paragraph !</p>
   </body>
 </html>
