--- a/Homepage.html
+++ b/Homepage.html
@@ -5,5 +5,6 @@
   <body>
     <h1>Hello World</h1>
     <p>Added a paragraph !</p>
+    <p>This paragraph belongs to Sponsors</p>
   </body>
 </html>
